--- a/maven-super-pom/pom.xml
+++ b/maven-super-pom/pom.xml
@@ -4,14 +4,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.digimono</groupId>
+  <groupId>io.github.openfrog</groupId>
   <artifactId>maven-super-pom</artifactId>
   <packaging>pom</packaging>
   <version>0.0.1-SNAPSHOT</version>
 
   <name>${project.artifactId}</name>
   <description>Top-level parent super POM for all projects</description>
-  <url>https://github.com/digimono/maven-archetypes</url>
+  <url>https://github.com/openfrog/maven-archetypes</url>
 
   <inceptionYear>2019</inceptionYear>
 
@@ -838,10 +838,10 @@
 
   <developers>
     <developer>
-      <id>digimono</id>
+      <id>openfrog</id>
       <name>yangyanju</name>
       <email>yanjuyang@outlook.com</email>
-      <url>https://github.com/digimono</url>
+      <url>https://github.com/openfrog</url>
     </developer>
   </developers>
 
@@ -854,9 +854,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:https://github.com/digimono/maven-archetypes.git</connection>
-    <developerConnection>scm:git:https://github.com/digimono/maven-archetypes.git</developerConnection>
-    <url>https://github.com/digimono/maven-archetypes</url>
+    <connection>scm:git:https://github.com/openfrog/maven-archetypes.git</connection>
+    <developerConnection>scm:git:https://github.com/openfrog/maven-archetypes.git</developerConnection>
+    <url>https://github.com/openfrog/maven-archetypes</url>
     <tag>HEAD</tag>
   </scm>
 
