--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.digimono</groupId>
+  <groupId>io.github.openfrog</groupId>
   <artifactId>maven-archetypes</artifactId>
   <packaging>pom</packaging>
   <version>${revision}</version>
