--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <version>${revision}</version>
 
   <properties>
-    <revision>0.0.1-SNAPSHOT</revision>
+    <revision>0.0.1</revision>
 
     <archetype-packaging.version>3.1.1</archetype-packaging.version>
     <maven-archetype-plugin.version>3.1.0</maven-archetype-plugin.version>
