--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <version>${revision}</version>
 
   <properties>
-    <revision>0.0.1</revision>
+    <revision>0.0.1-SNAPSHOT</revision>
 
     <archetype-packaging.version>3.1.1</archetype-packaging.version>
     <maven-archetype-plugin.version>3.1.0</maven-archetype-plugin.version>
@@ -109,5 +109,8 @@
 
   <modules>
     <module>maven-super-pom</module>
+    <module>maven-application-archetype</module>
+    <module>maven-library-archetype</module>
+    <module>maven-multi-module-archetype</module>
   </modules>
 </project>
