--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 
   <properties>
     <revision>0.0.2-SNAPSHOT</revision>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
+
+    <maven.deploy.skip>true</maven.deploy.skip>
 
     <archetype-packaging.version>3.1.1</archetype-packaging.version>
     <maven-archetype-plugin.version>3.1.0</maven-archetype-plugin.version>
@@ -18,8 +22,6 @@
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <flatten-maven-plugin.version>1.1.0</flatten-maven-plugin.version>
-
-    <maven.deploy.skip>true</maven.deploy.skip>
   </properties>
 
   <build>
@@ -36,6 +38,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-archetype-plugin</artifactId>
           <version>${maven-archetype-plugin.version}</version>
+          <configuration>
+            <skip>false</skip>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -44,6 +49,7 @@
           <configuration>
             <!-- Required so that .gitignore gets included in archetypes; see https://issues.apache.org/jira/browse/MRESOURCES-190 -->
             <addDefaultExcludes>false</addDefaultExcludes>
+            <encoding>${project.build.resourcesEncoding}</encoding>
           </configuration>
         </plugin>
         <plugin>
