--- a/maven-multi-module-archetype/src/test/resources/projects/it1/archetype.properties
+++ b/maven-multi-module-archetype/src/test/resources/projects/it1/archetype.properties
@@ -1,4 +1,4 @@
-groupId=io.github.openfrog
+groupId=io.github.digimono
 artifactId=multi-module-sample
 version=1.0.0-SNAPSHOT
-package=io.github.openfrog
+package=io.github.digimono
