--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.openfrog</groupId>
+  <groupId>io.github.digimono</groupId>
   <artifactId>maven-archetypes</artifactId>
   <packaging>pom</packaging>
   <version>${revision}</version>
 
   <properties>
-    <revision>0.0.2-SNAPSHOT</revision>
+    <revision>0.0.3-SNAPSHOT</revision>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourcesEncoding>UTF-8</project.build.resourcesEncoding>
 
