--- a/maven-application-archetype/src/test/resources/projects/it1/archetype.properties
+++ b/maven-application-archetype/src/test/resources/projects/it1/archetype.properties
@@ -1,4 +1,4 @@
-groupId=io.github.openfrog
+groupId=io.github.digimono
 artifactId=sample-app
 version=1.0.0-SNAPSHOT
-package=io.github.openfrog
+package=io.github.digimono
