--- a/maven-multi-module-archetype/src/main/resources/archetype-resources/__rootArtifactId__-dao/pom.xml
+++ b/maven-multi-module-archetype/src/main/resources/archetype-resources/__rootArtifactId__-dao/pom.xml
@@ -54,33 +54,33 @@
     </dependency>
 
     <!-- Third dependencies -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-jdbc</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-classic</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-core</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-    </dependency>
+    <!--<dependency>-->
+    <!--  <groupId>org.springframework.boot</groupId>-->
+    <!--  <artifactId>spring-boot-starter-jdbc</artifactId>-->
+    <!--  <exclusions>-->
+    <!--    <exclusion>-->
+    <!--      <groupId>ch.qos.logback</groupId>-->
+    <!--      <artifactId>logback-classic</artifactId>-->
+    <!--    </exclusion>-->
+    <!--    <exclusion>-->
+    <!--      <groupId>ch.qos.logback</groupId>-->
+    <!--      <artifactId>logback-core</artifactId>-->
+    <!--    </exclusion>-->
+    <!--  </exclusions>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--  <groupId>org.mybatis.spring.boot</groupId>-->
+    <!--  <artifactId>mybatis-spring-boot-starter</artifactId>-->
+    <!--  <exclusions>-->
+    <!--    <exclusion>-->
+    <!--      <groupId>org.springframework.boot</groupId>-->
+    <!--      <artifactId>spring-boot-starter-logging</artifactId>-->
+    <!--    </exclusion>-->
+    <!--  </exclusions>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+    <!--  <groupId>mysql</groupId>-->
+    <!--  <artifactId>mysql-connector-java</artifactId>-->
+    <!--</dependency>-->
   </dependencies>
 </project>
