--- a/maven-application-archetype/src/main/resources/archetype-resources/src/main/resources/boot.conf
+++ b/maven-application-archetype/src/main/resources/archetype-resources/src/main/resources/boot.conf
@@ -1,3 +1,3 @@
-JAVA_OPTS="${prop.app.java-opts}"
-LOG_FOLDER=${prop.log.dir}
-PID_FOLDER=${prop.pid.dir}
+JAVA_OPTS="${PROP_APP_JAVA_OPTS}"
+LOG_FOLDER=${PROP_LOG_DIR}
+PID_FOLDER=${PROP_PID_DIR}
