--- a/maven-multi-module-archetype/src/main/resources/archetype-resources/__rootArtifactId__-app/pom.xml
+++ b/maven-multi-module-archetype/src/main/resources/archetype-resources/__rootArtifactId__-app/pom.xml
@@ -20,7 +20,7 @@
 
     <main-class>${package}.app.Application</main-class>
 
-    <!-- Shell Environment Variables -->
+    <!-- Shell Variables -->
     <SERVER_PORT>8080</SERVER_PORT>
     <PROP_APP_NAME>${project.build.finalName}</PROP_APP_NAME>
     <PROP_BUILD_FINAL_NAME>${project.build.finalName}</PROP_BUILD_FINAL_NAME>
@@ -132,6 +132,8 @@
       <properties>
         <activeProfile>development</activeProfile>
         <activeProfileShort>dev</activeProfileShort>
+
+        <!-- Shell Variables -->
         <PROP_LOG_DIR>${main.basedir}/logs</PROP_LOG_DIR>
         <PROP_PID_DIR>/var/run</PROP_PID_DIR>
         <PROP_LOG_LEVEL>INFO</PROP_LOG_LEVEL>
@@ -143,6 +145,8 @@
       <properties>
         <activeProfile>test</activeProfile>
         <activeProfileShort>test</activeProfileShort>
+
+        <!-- Shell Variables -->
         <PROP_LOG_DIR>/data1/logs/${PROP_APP_NAME}</PROP_LOG_DIR>
         <PROP_PID_DIR>/data1/run/${PROP_APP_NAME}</PROP_PID_DIR>
         <PROP_LOG_LEVEL>INFO</PROP_LOG_LEVEL>
@@ -154,6 +158,8 @@
       <properties>
         <activeProfile>production</activeProfile>
         <activeProfileShort>prod</activeProfileShort>
+
+        <!-- Shell Variables -->
         <PROP_LOG_DIR>/data1/logs/${PROP_APP_NAME}</PROP_LOG_DIR>
         <PROP_PID_DIR>/data1/run/${PROP_APP_NAME}</PROP_PID_DIR>
         <PROP_LOG_LEVEL>ERROR</PROP_LOG_LEVEL>
