--- a/maven-application-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
+++ b/maven-application-archetype/src/main/resources/archetype-resources/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
   profiles:
     active: ${activeProfile}
 
+  http:
+    encoding:
+      enabled: true
+      charset: UTF-8
+      force: true
+
   aop:
     proxy-target-class: true
 
