--- a/maven-super-pom/pom.xml
+++ b/maven-super-pom/pom.xml
@@ -145,6 +145,7 @@
     <vavr.version>0.10.2</vavr.version>
     <bouncycastle.version>1.60</bouncycastle.version>
     <hazelcast.version>3.12.4</hazelcast.version>
+    <lombok.version>1.18.10</lombok.version>
   </properties>
 
   <build>
@@ -860,6 +861,12 @@
         <groupId>com.hazelcast</groupId>
         <artifactId>hazelcast</artifactId>
         <version>${hazelcast.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version>
+        <scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
