Add kotlin config

--- a/maven-super-pom/pom.xml
+++ b/maven-super-pom/pom.xml
@@ -26,6 +26,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.release>${java.version}</maven.compiler.release>
+    <maven.compiler.parameters>false</maven.compiler.parameters>
     <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
 
     <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
@@ -160,6 +161,7 @@
             <target>${maven.compiler.target}</target>
             <!--<release>${maven.compiler.release}</release>-->
             <encoding>${project.build.sourceEncoding}</encoding>
+            <parameters>${maven.compiler.parameters}</parameters>
           </configuration>
         </plugin>
         <plugin>
