--- a/maven-super-pom/pom.xml
+++ b/maven-super-pom/pom.xml
@@ -98,13 +98,13 @@
     <exclude-dependencies-group-ids/>
 
     <!-- Dependencies version -->
-    <spring.version>5.1.11.RELEASE</spring.version>
-    <spring-boot.version>2.1.10.RELEASE</spring-boot.version>
-    <spring-cloud.version>Greenwich.SR4</spring-cloud.version>
+    <spring.version>5.2.1.RELEASE</spring.version>
+    <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
+    <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
     <spring-retry.version>1.2.4.RELEASE</spring-retry.version>
-    <jackson.version>2.9.10</jackson.version>
-    <jackson-databind.version>2.9.10.1</jackson-databind.version>
-    <hikaricp.version>3.2.0</hikaricp.version>
+    <jackson.version>2.10.0</jackson.version>
+    <jackson-databind.version>2.10.0</jackson-databind.version>
+    <hikaricp.version>3.4.1</hikaricp.version>
 
     <junit.version>4.12</junit.version>
     <junit5.version>5.5.2</junit5.version>
